# django-reverse-js

./: .babelrc  .coveragerc  .gitignore  LICENSE  README.md  index.js  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini  webpack.config.js
.github/workflows/: tests.yaml
django_reverse_js/: apps.py  conf.py  core.py  views.py
django_reverse_js/management/commands/: createstatic_reversejs.py
django_reverse_js/templates/django_reverse_js/: url-resolver.js  url-resolver.tpl.js
django_reverse_js/templatetags/: reversejs.py
tests/: index.test.js  settings.py  test_command.py  test_conf.py  test_core.py  test_templatetags.py  urls.py
tests/data/: routes.json
tests/templates/django_reverse_js/: url-resolver.js  url-resolver.min.js
