[build-system]
requires = [
    "setuptools>=60",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "django-reverse-js"
version = "0.1.7"
authors = [{name="Davide Setti"}]
dependencies = [
    "django>=3.2",
]
requires-python = ">=3.10"
description = "Django URL handling in JavaScript"
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Framework :: Django",
	"Framework :: Django :: 4.2",
	"Framework :: Django :: 5.0",
	"Framework :: Django :: 5.1",
	"Framework :: Django :: 5.2",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
	"Intended Audience :: Developers",
]
dynamic = ["readme"]

[project.urls]
"Homepage" = "https://github.com/sevdog/django-reverse-js"
"Bug Tracker" = "https://github.com/sevdog/django-reverse-js/issues"


[tool.setuptools]
packages = ["django_reverse_js"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown; charset=UTF-8; variant=GFM"}

[project.optional-dependencies]
tests = [
    "coverage[toml]",
    "pytest",
    "pytest-django",
    "pytest-cov",
]

[tool.coverage.run]
omit = [
    "*/migrations/*",
    # do not check for templates
    "*/templates/*",
    # skip statics
    "*/static/*",
    "*/apps.py",
]

branch = true

source = [
    "django_reverse_js",
]

[tool.flake8]
max-line-length = 100

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
django_find_project = false
pythonpath = "."

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py{310,311,312}-django{42,50,51,52,main}
    py313-django{51,52,main}
    qa

[gh]
python =
    3.13 = py313
    3.12 = py312
    3.11 = py311
    3.10 = py310

[gh-actions:env]
DJANGO =
    4.2: dj42
    5.0: dj50
    5.1: dj51
    5.1: dj52
    main: djmain

[testenv]
package = editable
extras = tests
whitelist_externals = py.test
commands = py.test
deps=
    django42: Django>=4.2,<4.3
    django50: Django>=5.0,<5.1
    django51: Django>=5.1,<5.2
    django53: Django>=5.2,<5.3
    djmain: https://github.com/django/django/archive/main.tar.gz


[testenv:qa]
skip_install=true
deps =
    flake8
    flake8-pyproject
    black
commands =
    flake8 django_reverse_js tests
    black -S --diff --check django_reverse_js tests
"""