[metadata]
name = django-reverse-js
version = 0.1.1
author = Davide Setti
description = Django URL handling in JavaScript
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sevdog/django-reverse-js
project_urls =
    Bug Tracker = https://github.com/sevdog/django-reverse-js/issues
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Framework :: Django :: 3.2
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
	Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 2.2

[options.packages.find]
exclude = tests

[flake8]
max-line-length = 100
