[metadata]
name = django-reverse-js
version = 0.1.4
author = Davide Setti
description = Django URL handling in JavaScript
long_description = file: README.md
long_description_content_type = text/markdown
license_files = file: LICENSE
url = https://github.com/sevdog/django-reverse-js
project_urls =
    Bug Tracker = https://github.com/sevdog/django-reverse-js/issues
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Framework :: Django :: 3.2
	Framework :: Django :: 4.0
	Framework :: Django :: 4.1
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
	Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.7
install_requires =
    Django >= 2.2

[options.packages.find]
exclude = tests

[flake8]
max-line-length = 100

[coverage:run]
omit =
    */migrations/*
    # do not check for templates
    */templates/*
    # skip statics
    */static/*

source =
    django_reverse_js

[tox:tox]
envlist =
    py{37,38,39,310}-django{22,30,31,32}
    py{38,39,310,311}-django{40,41,master}
    qa

[testenv]
setenv =
    PYTHONPATH = {toxinidir}
usedevelop = true
extras = tests
commands = py.test --cov --ds=tests.settings
deps=
    pytest
    pytest-cov
    pytest-django
    django22: Django>=2.2,<2.23
    django30: Django>=3.0,<3.1
    django31: Django>=3.1,<3.2
    django32: Django>=3.2,<3.3
    django40: Django>=4.0,<4.1
    django41: Django>=4.1,<4.2
    djangomaster: https://github.com/django/django/archive/main.tar.gz

[testenv:qa]
skip_install=true
deps =
    flake8
commands =
    flake8 django_reverse_js tests